# okawak_blog

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  README.md  mise.local.toml.example  mise.toml  restart.sh  rust-toolchain.toml
apps/obsidian_uploader/: Cargo.toml
apps/obsidian_uploader/obsidian/Clippings/: CargoでインストールしたRustパッケージをupdateする.md  Terraformを活用したAWSの勉強法.md
apps/obsidian_uploader/obsidian/DiscordClippings/: 20250709_232122.md
apps/obsidian_uploader/obsidian/DiscordDaily/: 20250706_123353.md  20250709_230246.md
apps/obsidian_uploader/obsidian/Memo/: 日々のコマンド.md
apps/obsidian_uploader/obsidian/Publish/daily/: chapter.md
apps/obsidian_uploader/obsidian/Publish/statistics/: chapter.md
apps/obsidian_uploader/obsidian/Publish/tech/: chapter.md
apps/obsidian_uploader/obsidian/_templates/templater_plugin/: frontmatter.md
apps/obsidian_uploader/src/: bookmark.rs  config.rs  converter.rs  error.rs  lib.rs  main.rs  models.rs
apps/obsidian_uploader/tests/: e2e_test.rs  integration_test.rs
apps/publisher_artifacts/: Cargo.toml
apps/publisher_artifacts/src/: error.rs  lib.rs
apps/publisher_obsidian/: Cargo.toml
apps/publisher_obsidian/src/: error.rs  lib.rs  parser.rs  scanner.rs
crates/blog_server/: Cargo.toml
crates/blog_server/src/: app.rs  components.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
crates/blog_server/src/components/: article_card.module.scss  article_card.rs  footer.module.scss  footer.rs  header.module.scss  header.rs  markdown_renderer.module.scss  markdown_renderer.rs  sidebar.module.scss  sidebar.rs  tag_list.module.scss  tag_list.rs
crates/blog_server/src/handlers/: articles.rs
crates/blog_server/src/infrastructure/: repository.rs  search.rs  storage.rs
crates/blog_server/src/models/: article.rs  category.rs
crates/blog_server/src/routes/: article.module.scss  article.rs  category.rs  home.module.scss  home.rs  layout.module.scss  not_found.rs
crates/blog_server/src/services/: s3.rs
crates/blog_server/style/: .gitignore  bundle.scss  main.scss  tailwind.css
crates/domain/: Cargo.toml
crates/domain/src/: artifact_document.rs  business_rules.rs  entities.rs  error.rs  lib.rs  models.rs  publishable.rs  services.rs  site_page.rs  use_cases.rs
crates/domain/src/entities/: article.rs  attributes.rs  identifiers.rs
crates/notion_api/: Cargo.toml
crates/notion_api/src/: client.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  main_ref.rs  markdown.rs  models.rs
crates/notion_api/src/markdown/: bookmark.rs  bulleted_list_item.rs  code.rs  divider.rs  equation.rs  heading.rs  image.rs  link_to_page.rs  numbered_list_item.rs  paragraph.rs  quote.rs
crates/notion_api/tests/: github_env.rs  integration_test_local.rs
crates/obsidian_uploader/: Cargo.toml  README.md
crates/obsidian_uploader/src/: bookmark.rs  config.rs  converter.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs  scanner.rs  slug.rs
crates/obsidian_uploader/tests/: e2e_test.rs  integration_test.rs
crates/publish/: Cargo.toml  README.md
crates/publish/artifacts/: Cargo.toml
crates/publish/artifacts/src/: error.rs  lib.rs
crates/publish/bookmark/: Cargo.toml
crates/publish/bookmark/src/: error.rs  lib.rs
crates/publish/ingest/: Cargo.toml
crates/publish/ingest/src/: converter.rs  error.rs  lib.rs  parser.rs
crates/publish/publisher/: Cargo.toml  README.md
crates/publish/publisher/obsidian/: README.md
crates/publish/publisher/obsidian/Clippings/: CodeQLの対象にActions追加、bun.lock登場など｜Productivity Weekly(2024-12-18).md
crates/publish/publisher/obsidian/DiscordClippings/: 20250719_111036.md  20250824_094627.md
crates/publish/publisher/obsidian/DiscordDaily/: 20250709_230404.md
crates/publish/publisher/obsidian/Memo/: discord_message_senderロードマップ.md
crates/publish/publisher/obsidian/_templates/: about_template.md
crates/publish/publisher/src/: classify.rs  config.rs  error.rs  lib.rs  main.rs  render.rs  slug.rs  types.rs
crates/publish/publisher/tests/: e2e_test.rs  integration_test.rs  support.rs
crates/publish/src/: artifacts.rs  bookmark.rs  classify.rs  error.rs  ingest.rs  lib.rs  main.rs  render.rs  slug.rs  types.rs
crates/publish/src/ingest/: converter.rs  parser.rs  scanner.rs
crates/publish/tests/: e2e_test.rs  integration_test.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  ports.rs  presentation.rs  server.rs  usecases.rs
crates/server/src/handlers/: api.rs  articles.rs  ssr.rs  static_files.rs
crates/server/src/infrastructure/: repository.rs  search.rs  storage.rs
crates/server/src/presentation/: converters.rs
crates/service/: Cargo.toml
crates/service/src/: blog.rs  config.rs  error.rs  lib.rs  s3.rs
crates/shared/: Cargo.toml
crates/shared/src/: dto.rs  lib.rs  types.rs  utils.rs
crates/site/infra/: Cargo.toml
crates/site/infra/src/: cache.rs  error.rs  lib.rs
crates/site/server/: Cargo.toml
crates/site/server/src/: auth.rs  config.rs  error.rs  handlers.rs  http_cache.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs  server.rs  test_support.rs
crates/site/server/src/auth/: extractors.rs
crates/site/web/: Cargo.toml  README.md  package.json  ui_config.toml
crates/site/web/end2end/: package-lock.json  package.json  playwright.config.ts
crates/site/web/src/: app.rs  components.rs  error.rs  format.rs  lib.rs  routes.rs  types.rs
crates/site/web/style/: bundle.scss  content.css  main.scss  tailwind.css
crates/web/: Cargo.toml
crates/web/src/: app.rs  components.rs  error.rs  lib.rs  main.rs  routes.rs
crates/web/src/components/: article_card.module.scss  article_card.rs  bookmark.rs  footer.module.scss  header.module.scss  header.rs  markdown_renderer.rs  sidebar.rs
crates/web/src/models/: article.rs
crates/web/src/routes/: about.module.scss  about.rs  article.module.scss  article.rs  category.rs  home.module.scss  home.rs
crates/web/src/services/: s3.rs
crates/web/style/: bundle.scss  main.scss
e2e/: README.md  (+6 more)
(+177 files in other folders)
