[workspace]
members = [
    "crates/domain",
    "crates/publish/publisher",
    "crates/publish/ingest",
    "crates/publish/artifacts",
    "crates/publish/bookmark",
    "crates/site/server",
    "crates/site/web",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["okawak"]
description = "okawak's blog builder"
edition = "2024"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
