[workspace]
members = [
    "crates/domain",
    "crates/publish/*",
    "crates/site/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["okawak"]
description = "okawak's blog builder"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false }
axum = "0.8"
chrono = "0.4"
console_error_panic_hook = "0.1"
env_logger = "0.11"
futures = "0.3"
ignore = "0.4"
indoc = "2"
js-sys = "0.3"
leptos = "0.8"
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
log = "0.4"
pulldown-cmark = "0.13"
reactive_stores = "0.4"
regex = "1"
reqwest = "0.13"
rstest = "0.26"
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
stylance = "0.7"
tempfile = "3"
thiserror = "2"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
wasm-bindgen = "0.2"
web-sys = "0.3"
tw_merge = { version = "0.1", features = ["variant"] }
leptos_ui = "0.3"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
