[package]
name = "obsidian_uploader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
pulldown-cmark = "0.13"
thiserror = "2"
anyhow = "1"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
url = "2"
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
rstest = "0.26"
indoc = "2"
