[package]
name = "obsidian_uploader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../../crates/domain" }
publisher_artifacts = { path = "../publisher_artifacts" }
publisher_obsidian = { path = "../publisher_obsidian" }
sha2 = "0.11"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.26"
url = "2"
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
rstest = "0.26"
indoc = "2"
