[package]
name = "domain"
version.workspace = true
authors.workspace = true
description = "Core domain logic and business rules for blog application"
edition.workspace = true

[dependencies]
# Minimal dependencies for pure domain logic (std + error handling only)
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
serde_json = "1"
