[package]
name = "domain"
version.workspace = true
authors.workspace = true
description = "Core domain logic and business rules for blog application"
edition.workspace = true
license.workspace = true

[dependencies]
# Minimal dependencies for pure domain logic (std + error handling only)
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
