[package]
name = "domain"
version.workspace = true
authors.workspace = true
description = "Core domain logic and business rules for blog application"
edition.workspace = true
license.workspace = true

[dependencies]
# Keep domain dependencies pure and WASM-compatible.
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
