[package]
name = "notion_api"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
governor = { version = "0.10", default-features = false, features = ["std"] }
thiserror = "2"
url = "2"
anyhow = "1"
