[package]
name = "obsidian_uploader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
pulldown-cmark = "0.11"
thiserror = "2"
anyhow = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
rstest = "0.25"
