[package]
name = "publisher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
env_logger.workspace = true
futures.workspace = true
ignore.workspace = true
log.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
tempfile.workspace = true
