[package]
name = "service"
version.workspace = true
authors.workspace = true
description = "Service layer implementing Rust-idiomatic patterns for blog application"
edition.workspace = true

[dependencies]
# Internal dependencies
domain = { path = "../domain" }
shared = { path = "../shared" }

# Core web framework for Leptos Server Functions
axum = { version = "0.8", optional = true }
leptos = { version = "0.8", optional = true }
leptos_axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

# Serialization for API boundaries  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# AWS SDK for S3 integration (SSR only)
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio"], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"], optional = true }
aws-types = { version = "1", optional = true }

# Error handling & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async support
futures = "0.3"
async-trait = "0.1"

# Configuration management
config = "0.15"

[features]
default = []
ssr = [
    "dep:axum",
    "dep:leptos",
    "dep:leptos_axum", 
    "dep:tokio",
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-types",
]

[dev-dependencies]
rstest = "0.26"
tokio-test = "0.4"