[package]
name = "artifacts"
version.workspace = true
authors.workspace = true
description = "Publisher-side artifact assembly and local artifact writing"
edition.workspace = true

[dependencies]
domain = { path = "../../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"
