[package]
name = "artifacts"
version.workspace = true
authors.workspace = true
description = "Publisher-side artifact assembly and local artifact writing"
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
