[package]
name = "bookmark"
version.workspace = true
authors.workspace = true
description = "Publisher-side bookmark enrichment"
edition.workspace = true

[dependencies]
log = "0.4"
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.26"
thiserror = "2"
url = "2"

[dev-dependencies]
indoc = "2"
rstest = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
