[package]
name = "bookmark"
version.workspace = true
authors.workspace = true
description = "Publisher-side bookmark enrichment"
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
scraper.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
