[package]
name = "ingest"
version.workspace = true
authors.workspace = true
description = "Publisher-side Obsidian vault reading and markdown rendering"
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../../domain" }
ignore.workspace = true
log.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
tempfile.workspace = true
