[package]
name = "publisher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../../domain" }
artifacts = { path = "../artifacts" }
ingest = { path = "../ingest" }
bookmark = { path = "../bookmark" }
sha2 = "0.11"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
rstest = "0.26"
indoc = "2"
