[package]
name = "publisher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../../domain" }
artifacts = { path = "../artifacts" }
ingest = { path = "../ingest" }
bookmark = { path = "../bookmark" }
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true
env_logger.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
indoc.workspace = true
