[package]
name = "web"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "web"

[dependencies]
domain = { path = "../../domain" }

# Leptos
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
thaw = { workspace = true, features = ["ssr"] }
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
log.workspace = true
stylance.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
reactive_stores.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Element", "Location", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
infra = { path = "../infra", optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
leptos_axum = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen", "thaw/hydrate"]
ssr = [
  "dep:infra",
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "dep:env_logger",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "thaw/ssr",
]


[package.metadata.stylance]

# output_file
# When set, stylance-cli will bundle all css module files
# into by concatenating them and put the result in this file.
output_file = "./style/bundle.scss"

# output_dir
# When set, stylance-cli will create a folder named "stylance" inside
# the output_dir directory.
# The stylance folder will be populated with one file per detected css module
# and one _all.scss file that contains one `@use "file.module-hash.scss";` statement
# per module file.
# You can use that file to import all your modules into your main scss project.
output_dir = "./style/"

# folders
# folders in which stylance cli will look for css module files.
# defaults to ["./src/"]
folders = ["./src/"]

# extensions
# files ending with these extensions will be considered to be
# css modules by stylance cli and will be included in the output
# bundle
# defaults to [".module.scss", ".module.css"]
extensions = [".module.scss", ".module.css"]

# scss_prelude
# When generating an scss file stylance-cli will prepend this string
# Useful to include a @use statement to all scss modules.
scss_prelude = """
@use "main" as *;
@use "sass:color";
"""

# hash_len
# Controls how long the hash name used in scoped classes should be.
# It is safe to lower this as much as you want, stylance cli will produce an
# error if two files end up with colliding hashes.
# defaults to 7
hash_len = 7

# class_name_pattern
# Controls the shape of the transformed scoped class names.
# [name] will be replaced with the original class name
# [hash] will be replaced with the hash of css module file path.
# defaults to "[name]-[hash]"
# class_name_pattern = "my-project-[name]-[hash]"
