[package]
name = "web"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "web"

[dependencies]
domain = { path = "../../domain" }

# Leptos
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
log.workspace = true
chrono = { workspace = true, features = ["serde"] }
tw_merge.workspace = true
leptos_ui.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Document", "DomTokenList", "Element", "HtmlElement", "Location", "MutationObserver", "MutationObserverInit", "MutationRecord", "Node", "NodeList", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
infra = { path = "../infra", optional = true }
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = [
  "dep:infra",
  "dep:axum",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
